--- a/literatur.bib
+++ b/literatur.bib
@@ -27,3 +27,9 @@
                 title = "Modelling interactome: scale-free or geometric",
                 journal = "Bioinformatics"
                 year = "2004" }
+
+@article{ fatcat,
+                author = "Yuzhen Ye, Adam Godzik",
+                title = "Flexible structure alignment by chaining aligned fragment pairs allowing twists",
+                journal = "Bioinformatics",
+                year = "2003" }
