added some proteins for further investigation

--- a/arbeit.tex
+++ b/arbeit.tex
@@ -183,6 +183,19 @@ In dem Datensatz befinden sich Paare von PDB-Eintr\"agen, die von allen drei Pro
 
 \subsection{Fallstudien}
 
+Folgende Proteine wurden vorgeschlagen:\\
+4-Helix-Bundles:\\
+Cytochrome b 552 (PDB: 1QPU und andere)\\
+HUman growth Hormone (PDB: 1HGU und andere)\\
+Globin-Fold:\\
+gefunden in gro"sen gruppen verwandter Proteine, 16-99 Sequenzidentit\"at bei gleichbleibender Struktur: Myoglobine, Hemoglobine, Phycocyanine\\
+TIM-Barrels:\\
+gefunden in Proteinen mit vielen verschiedenen Funktionen und Sequenzen\\
+BSP: Pyruvat-Kinase (eine barrel-dom\"ane, PDB: 1A3W), Triosephosphat-Isomerase (PDB: 7TIM)
+
+
+
+
 \chapter{Ergebnisse}
 
 
