--- a/literatur.bib
+++ b/literatur.bib
@@ -25,7 +25,7 @@
 @article{ frqdistribution,
                 author = "Przulj et al",
                 title = "Modelling interactome: scale-free or geometric",
-                journal = "Bioinformatics"
+                journal = "Bioinformatics",
                 year = "2004" }
 
 @article{ fatcat,
