--- a/arbeit.tex
+++ b/arbeit.tex
@@ -72,6 +72,8 @@ Um die Proteinstrukturtopologien aus der PTGL zu vergleichen wurde das Programm 
 
 \section{PLCC}
 
+PLCC ist das Programm, das die Graphen der PTGL erstellt. Hierf\"ur ben\"otigt es die PDB und DSSP Dateien des zu modellierenden Proteins. Der DSSP-Algorithmus weist den Residuen aus der PDB-Datei Sekund\"arstrukturen zu. Diese werden in den PTGL-Graphen als Knoten modelliert. Um die r\"aumliche N\"ahe der Sekund\"arstrukturen zueinander festzustellen werden die Koordinaten aus der PDB-Datei genutzt. Wenn zwei Sekund\"arstrukturen r\"aumlich benachbart sind, werden die entsprechenden Knoten durch eine Kante verbunden.
+
 \section{Die PTGL}
 
 
@@ -85,7 +87,7 @@ Die PTGL \cite{vplg} erm\"oglicht also die Darstellung von Proteinstrukturtopolo
 Es gibt diverse M\"oglichkeiten diesesd Problem zu bearbeiten, von denen jedoch keine einfach ist.
 Eine M\"oglichkeit ist, die Suche nach gr\"o"sten gemeinsamen isomorphen Teilgraphen in $G$ und $G'$, oder man versucht eine Editierdistanz zu berechnen - also herauszufinden, wie viele Operationen (Hinzuf\"ugen oder Entfernen von Knoten und Kanten) n\"otig sind um $G$ in $G'$ zu \"uberf\"uhren. Diese beiden genannten Methoden erfordern jedoch aufw\"andige Berechnungen.
 Deshalb werden Methoden verwendet, die \emph{Topologische Charakteristiken} berechnen und dies in polynomieller Laufzeit bewerkstelligen. Der Vorteil hierbei ist, dass die (aufw\"andige) Berechnung dieser Charakteristiken nur einmal pro Graph erfolgen muss. Die Charakteristiken k\"onen dann als Datenpunkte verglichen werden und man spart sich die Berechnungen, die man sonst f\"ur alle Paare von Graphen $G,G'$ durchf\"uhren muss.
-Eine Algorithmus, mit dem sich solche Charakteristiken verechnen lassen wurde 2009 von \textit{N. Shervashidze} vorgestellt: Der \textit{Graphlet}-Algorithmus.
+Als Charakteristika eignen sich beispielsweise induzierte Teilgraphen
 
 
 \paragraph{Beschreibung des Algorithmus}
@@ -136,6 +138,12 @@ Aus der .gml-Datei wird ein Graph erstellt. Das Programm nutzt hierbei die \text
 
 \subsection{Tanimoto-Koeffizient}
 
+Der Tanimoto-Koeffizient ist im eigentlichen Sinne ein Ma"s, um die \"Ahnlichkeit von gleichm\"achtigen Mengen zu bewerten. F\"ur zwei Mengen $A,B$ berechnet sich der Tanimoto-Koeffizient $D_{Tan}(A,B)$ folgenderma"sen:
+
+\[ D_{Tan}(A,B) := \frac{\sum_{x \ in A \land x \in B} 1}{\sum_{x \in A \lor x \in B} 1} \]
+
+Er berechnet also die relative H\"aufigkeit der gemeinsamen Elemente beider Mengen. Damit ist dieses Berechnungsschema auch f\"ur Vektoren geeignet.
+
 \subsection{Relative \textit{Graphlet}-H\"aufigkeiten-Distanz}
 
 \textit{N. Pr\v{z}ulj et al.} haben \textit{Graphlets} bereits in verschiedensten Zusammenh\"anen auf biologische Daten wie Protein-Protein-Interaktionsnetzwerke \cite{frqdistribution} angewandt. Als Ma"s f\"ur die \"Ahnlichkeit von Netzwerken nutzen sie die Relative-\textit{Graphlet}-H\"aufigkeiten-Distanz $D(G,H)$. Diese Metrik bestimmt den Unterschied zwischen zwei Graphen $G$ und $H$ als logarithmierte Differenz der normalisierten Anzahl der \textit{Graphlets} in $G$ und $H$. Sie ist folgenderma"sen definiert: \\
@@ -146,14 +154,14 @@ Dann ist die Relative-\textit{Graphlet}-H\"aufigkeiten-Distanz $D(G,H)$ f\"ur zw
 
 \begin{subequations}
 \begin{align}
-D(G,H) = \sum_{i = 1}^{29} | F_{i}(G) - F_{i}(H) | \\
-mit F_{i}(G) = - log(\frac{N_{i}(G)}{T(G)})
+D(G,H) := \sum_{i = 1}^{29} | F_{i}(G) - F_{i}(H) | \\
+mit F_{i}(G) := - log(\frac{N_{i}(G)}{T(G)})
 \end{align}
 \end{subequations}
 
 
 
-Diese Metrik hat den Vorteil, dass sie die normailisierten \textit{Graphlet}-Vektoren verwendet. So ist ein guter Vergleich auch m\"oglich, wenn einzelne \textit{Graphlets} in den Netzwerken \"uberrepr\"asentiert sind.
+Diese Metrik hat den Vorteil, dass sie die normalisierten \textit{Graphlet}-Vektoren verwendet. So ist ein guter Vergleich auch m\"oglich, wenn einzelne \textit{Graphlets} in den Netzwerken \"uberrepr\"asentiert sind.
 Weiterhin wurde gezeigt, \cite{frqdistribution} dass diese Metrik auch bei verrauschten Daten noch sehr gut funktioniert.
 
 \subsection{\textit{Root-Mean-Square-Deviation}}
@@ -163,10 +171,11 @@ Die \textit{Root-Mean-Square-Deviation} RMSD ist ein Standardma"s zur Abstandsme
 \begin{subequations}
 \label{eq:rmsd}
 \begin{align}
-RMSD = \sum_{i=1}^{n} (x_i - y_i)^2
+RMSD(x,y) = \sum_{i=1}^{n} (x_i - y_i)^2
 \end{align}
 \end{subequations}
 
+\subsection{Anpassung der Parameter}
 
 \section{Datens\"atze}
 
