added some proteins

--- a/arbeit.tex
+++ b/arbeit.tex
@@ -200,7 +200,9 @@ Weitere PRoteine aus der Homologen Superfamilie, die sich eignen sind:\\
 2XL6: Cytochrom C aus Alcaligenes Xylosoxidans, gebunden mit NO\\
 2YL1: s.o. nur andere Variante mit anderem Bindungspartner.\\
 Diese beiden m\"ussten strukturell \"ahnlicher sein, als die weiter oben genannten Varianten von Cytochrom B562.\\
-Die oben genannten Proteine werden von CATH alle in die \emph{Topologie} der 4-Helix-\textit{Bundles} (Hemerythrin Untereinheit A) eingeordnet.
+Die oben genannten Proteine werden von CATH alle in die \emph{Topologie} der 4-Helix-\textit{Bundles} (Hemerythrin Untereinheit A) eingeordnet. Sie sind alle Teil der selben homologen Superfamilie.
+
+Zum Vergleich werden weiterhin 1rxq und 2qe9 aus der Homologen Superfamilie \textit{dinb family like domain}  
 
 
 
@@ -212,6 +214,7 @@ Sie k\"onnen mit Proteinen aus der Topologie \textit{Growth Hormone, Chain A} ve
 1M4R: Rekombinantes menschliches Interleukin 22\\
 1D9C: Rinder Interferon Gamma \\
 Die oben genannten Proteine aus der Topologie der Wachstumshormone haben eine Sequenzidentit\"at zwischen 35 und 60 Prozent. Sie scheinen sich gut f\"ur die untersuchung zu eignen.
+Das Protein mit der PDB-ID 1PV6 liegt in der selben Topologie, wird aber in eine andere Superfamilie eingeordnet.
 
 \subsubsection{Aldolasen}
 
@@ -222,13 +225,21 @@ Die Aldolasen 7TIM, 1NEY und 2V5L werden durch das gleich Gen in Hefe codiert. D
 \begin{tabular}{l r}
 
 PDB-ID & CATH-Code  \\
+2UTG & 1.10.210.10  \\
+1VIB & 1.10.287.120 \\
 1QPU & 1.20.120.10  \\
 1QQ3 & 1.20.120.10  \\
 2XL6 & 1.20.120.10  \\
 2YL1 & 1.20.120.10  \\
-1HGU & 1.20.1250.10 \\
+1rxq & 1.20.120.450 \\
+2qe9 & 1.20.120.450 \\
 1M4R & 1.20.1250.10 \\
+1HGU & 1.20.1250.10 \\
 1D9C & 1.20.1250.10 \\
+1PV6 & 1.20.1250.20 \\
+1AWR & 2.40.100.10  \\
+1NGL & 2.40.128.20  \\
+1N7V & 2.105.10.10  \\ % riesiges Virusprotein
 7TIM & 3.20.20.70   \\
 1NEY & 3.20.20.70   \\
 2V5L & 3.20.20.70   \\
