--- a/literatur.bib
+++ b/literatur.bib
@@ -33,3 +33,9 @@
                 title = "Flexible structure alignment by chaining aligned fragment pairs allowing twists",
                 journal = "Bioinformatics",
                 year = "2003" }
+                
+@article{ dali,
+          author = "Liisa Holm, Chris Sander",
+          title = "Dali: a network tool for protein structure comparison",
+          journal = "Trends in Biomedical Sciences",
+          year = "1995"}
