added idea for another case study

--- a/arbeit.tex
+++ b/arbeit.tex
@@ -252,7 +252,9 @@ PDB-ID & CATH-Code  \\
 
 \end{tabular}
 
+\subsubsection{Vergleich von Proteinen \"ahnlicher Gr\"o"se}
 
+Da \textit{Graphlets} in den Experimenten von Pruzlj et al und Shervashidze et auf gro"se Graphen angewandt wurden, bietet es sich an, sie auch auf gro"se PRotein komplexe anzuwenden und bei kleinen Proeinen den Aminsos\"auregraphen zu verwenden. So kann man (hoffentlich) das Problem der d\"unn besetzten Graphen umgehen und f\"ur verschiedene GR\"o"sen von Graphen relevante Ergebnisse erzielen. Daf\"ur muss ein Datensatz aus gr\"o"sen PRoteinkomplexen mit bekannter struktureller \"Ahnlichkeit zusammengestellt werden.
 
 \chapter{Ergebnisse}
 
