--- a/arbeit.tex
+++ b/arbeit.tex
@@ -227,7 +227,7 @@ Anfangs wurden 20 verschiedene Proteine aus verschiedenen CATH-Klassen zum Vergl
 
 \subsubsection{4-Helix-\textit{Bundles}}
 
-Das Cytochrom B562 von \emph{E. coli} (Bild einf\"ugen) ist ein Protein, das f\"ur Elektronentransport zust\"andig ist. Strukturell wird es als 4-Helix-\textit{Bundle} eingeordnet. Zu diesem Protein gibt es zwei PDB-Eintr\"age: 1QPU und 256B. Es gibt von diesem Rrotein auch eine Hem-bindende Variante, die oxidiert ist. Sie hat die PDB-ID 1QQ3. All diese Strukturdaten werden von CATH als sehr \"ahnliche Strukturen mit hoher Sequenzidentit\"at eingeordnet.
+Das Cytochrom B562 von \emph{E. coli} (Bild einf\"ugen) ist ein Protein, das f\"ur Elektronentransport zust\"andig ist. Strukturell wird es als 4-Helix-\textit{Bundle} eingeordnet. Zu diesem Protein gibt es zwei PDB-Eintr\"age: 1QPU und 256B. Es gibt von diesem Protein auch eine Hem-bindende Variante, die oxidiert ist. Sie hat die PDB-ID 1QQ3. All diese Strukturdaten werden von CATH als sehr \"ahnliche Strukturen mit hoher Sequenzidentit\"at eingeordnet.
 Um die Parameter und Metriken f\"ur den Vergleich zu testen, bietet es sich an, diese Proteine mit weiteren Proteinen aus der selben homologen Superfamilie zu vergleichen und diese dann mit Proteinen aus anderen Homologen Superfamilien zu vergleichen. Die entsprechenden Proteine werden h\"andisch entsprechend der Einordnung durch CATH gew\"ahlt. Proteine die neu designt wurden k\"onnten sich auch anbieten. Inwiefern eine Untersuchung an ihnen sinnvoll ist, muss aber noch \"uberpr\"uft werden.
 Weitere PRoteine aus der Homologen Superfamilie, die sich eignen sind:\\
 2XL6: Cytochrom C aus Alcaligenes Xylosoxidans, gebunden mit NO\\
@@ -282,7 +282,11 @@ PDB-ID & CATH-Code  \\
 
 \subsubsection{Vergleich von Proteinen \"ahnlicher Gr\"o"se}
 
-Da \textit{Graphlets} in den Experimenten von Pruzlj et al und Shervashidze et auf gro"se Graphen angewandt wurden, bietet es sich an, sie auch auf gro"se PRotein komplexe anzuwenden und bei kleinen Proeinen den Aminsos\"auregraphen zu verwenden. So kann man (hoffentlich) das Problem der d\"unn besetzten Graphen umgehen und f\"ur verschiedene GR\"o"sen von Graphen relevante Ergebnisse erzielen. Daf\"ur muss ein Datensatz aus gr\"o"sen PRoteinkomplexen mit bekannter struktureller \"Ahnlichkeit zusammengestellt werden.
+Da \textit{Graphlets} in den Experimenten von Pruzlj et al und Shervashidze et auf gro"se Graphen angewandt wurden, bietet es sich an, sie auch auf gro"se Proteinkomplexe anzuwenden und bei kleinen Proeinen den Aminsos\"auregraphen zu verwenden. So kann man (hoffentlich) das Problem der d\"unn besetzten Graphen umgehen und f\"ur verschiedene Gr\"o"sen von Graphen relevante Ergebnisse erzielen. Daf\"ur muss ein Datensatz aus gr\"o"sen Proteinkomplexen mit bekannter struktureller \"Ahnlichkeit zusammengestellt werden.
+
+\subsubsection{Vergleich nach EC-Termen}
+
+EC-Terme beschreiben die enzymatische Aktivit\"at von Biomolek\"ulen. Analog zu GO-Termen erm\"oglichen sie eine Klassfizierung von Biomolek\"ulen entsprechend iherer biolgoischen Funktion, ohne jedoch den gesamten Prozess, oder das Zellorganell, in den das Molek\"ul involviert ist, zu beschreiben. Dem Dogma folgend, dass die Struktur eines Proteins seine Funktion bestimmt, liegt die Vermutung nahe, dass Proteine mit \"ahnlicher Funktion auch eine \"ahnliche Struktur besitzen m\"ussen. Der Vergleich anhand von EC-Termen ist interessant, weil strukturell \"ahnliche Dom\"anen unterschiedliche enzymatische Aktivit\"aten besitzen k\"onnen. Wenn Proteine mit gleicher Dom\"ane und unterschiedlichen enzymatischen Aktivit\"aten richtig eingeordnet werden, spricht das f\"ur die Genauigkeit des Algorithmus. Es bietet sich ein Vergleich von Mannose-6-phosphat Isomerasen und 5-dehydro-4-deoxy-D-glucuronat Isomerasen an. Es gibt Enzyme mit diesen Funktionen in diversen CATH-Superfamilien. Sie sind interessant f\"ur die Analyse, weil sich Vertreter beider Enzymklassen teilweise die selbe Superfamilie teilen, w\"ahrend es gleichzietig Superfamilien gibt, in denen nur eine der beiden enzymatischen Funktionen vorkommt.
 
 \chapter{Ergebnisse}
 
